[metadata]
name = se-exporter
description-file = README

[flake8]
ignore = D203, W503, E722, W605
extend-ignore = E203
exclude =
    .git,
    build,
    dist,
    venv,
    .eggs,
    tests,
    setup.py,
    .example,
    .yaml,
    .vscode
max-complexity = 15
max-line-length = 120

[pylint.message-control]
disable = C0330,R0801,R0913,R0904,R0903,R0902,W0511,C0116,C0115,W0703,R0914,R0914,C0302,R0912,R0915,R0401
